# Bakalarsky-projekt-kod

./: .gitignore  README.md  clearLogs  cmpRun  compile  compile_commands.json  mergeLogFiles  run  square  test
doc/: config
src/: CMakeLists.txt  main.cpp
src/bakalarka/: CMakeLists.txt  main.cpp  package.xml
src/bakalarka/communication/: BlackMetal.cpp  BlackMetal.hpp  CMakeLists.txt
src/bakalarka/log/: CMakeLists.txt  Logger.cpp  Logger.hpp  colors.hpp  log.hpp
src/blackmetal/: CMakeLists.txt  package.xml
src/blackmetal/config/: blackmetal.yaml  bm_logger.yaml
src/blackmetal/launch/: blackmetal.launch.py
src/blackmetal/src/: blackmetal.cpp  bm_logServer.cpp  position_tracker.cpp
src/blackmetal/src/communication/: BMLogger.cpp  BMLogger.hpp  BlackMetal.cpp  BlackMetal.hpp  CMakeLists.txt  Client.cpp  Client.hpp  ReturnStatus.hpp
src/blackmetal/src/communication/client/: CMakeLists.txt  Client.cpp  Client.hpp  ReturnStatus.cpp  ReturnStatus.hpp  RobotDataDelegator.cpp  RobotDataDelegator.hpp  RobotDataReceiver.cpp  RobotDataReceiver.hpp
src/blackmetal/src/communication/controlSW/: BlackMetal.cpp  BlackMetal.hpp  CMakeLists.txt  Odometry.cpp  Odometry.hpp  RequestMatcher.cpp  RequestMatcher.hpp
src/blackmetal/src/communication/controlSW/filter/: FrequencyFilter.cpp  FrequencyFilter.hpp  LowPassFilter.cpp  LowPassFilter.hpp  RobotImpulseFilter.cpp  RobotImpulseFilter.hpp
src/blackmetal/src/communication/logSW/: BMLogger.cpp  BMLogger.hpp  CMakeLists.txt
src/blackmetal/src/communication/queue/: CMakeLists.txt  Queue.cpp  Queue.hpp
src/blackmetal/src/communication/queue/types/: RobotRequestType.cpp  RobotRequestType.hpp  RobotResponseType.cpp  RobotResponseType.hpp
src/blackmetal/src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp  log.hpp
src/blackmetal/src/stopwatch/: CMakeLists.txt  Stopwatch.cpp  Stopwatch.hpp
src/blackmetal/test/: CMakeLists.txt  main.cpp
src/blackmetal/test/communication/: CMakeLists.txt
src/blackmetal/test/communication/client/: CMakeLists.txt  Pipe.hpp  Process.hpp  dummyServer.cpp  dummyServer.hpp  testClient.cpp
src/blackmetal/test/communication/controlSW/: testOdometry.cpp  testOdometry.hpp
src/blackmetal/test/communication/queue/: CMakeLists.txt  testQueue.cpp
src/blackmetal/test/stopwatch/: CMakeLists.txt  testStopwatch.cpp
src/initializer/: BlackMetal.cpp  BlackMetal.hpp  LowPassFilter.cpp  LowPassFilter.hpp  RobotImpulseFilter.hpp
